removed commented out old styles from stylesheet no longer needed. deleted extra spacing. added class to modal form for styling.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-/* google font-family */
-
-/* font-family: 'Permanent Marker', cursive;
-font-family: 'Rock Salt', cursive;
-font-family: 'Miltonian Tattoo', cursive; */
-
 * {
     box-sizing: border-box;
 }
@@ -14,7 +8,6 @@ body {
     background-color: #333;
     color: #333;
     font-size: 100%;
-    /* font-family: 'Rock Salt', cursive; */
 }
 
 .card-body,
@@ -61,10 +54,6 @@ nav {
 #newRecipeModal {
     font-family: 'Miltonian Tattoo', cursive;
 }
-
-/* .steps-box {
-    word-wrap: break-word;
-} */
 
 .ingredient-box, .steps-box, .ingredientList, .ingredient {
     font-family: Arial, Helvetica, sans-serif;
